fix the the ENS truncation on proposal page

--- a/packages/prop-house-webapp/src/components/EthAddress/EthAddress.module.css
+++ b/packages/prop-house-webapp/src/components/EthAddress/EthAddress.module.css
@@ -12,11 +12,3 @@
 .ethAddress a:visited {
   color: inherit;
 }
-
-.address {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: 95px;
-  display: block;
-  overflow: hidden;
-}
